--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HBD Preawa 🎂🥳</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src=".vscode/to-do-list-icon-for-your-website-mobile-presentation-and-logo-design-free-vector.jpg" alt="Logo" class="logo"> <!-- โลโก้ของเว็บไซต์ -->
-            <h1>Welcome to the To-Do List App</h1>
-            <p>This app allows you to create a list of tasks, check them off as completed, and stay organized. Simply add a task using the input box below, and manage your list easily!</p>
-        </header>
+  <div class="container">
+    <!-- บอลลูนพื้นหลัง -->
+    <div class="balloon b1"></div>
+    <div class="balloon b2"></div>
+    <div class="balloon b3"></div>
+    <div class="balloon b4"></div>
 
-        <div class="todo-app">
-            <h2>TO-DO List <img src=".vscode/ดาวน์โหลด.jpg" alt="Icon"></h2>
-            <div class="row">
-                <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="addTask()">Add</button>
-            </div>
-            <ul id="list-container"> 
-                <!-- Example tasks (can be removed) -->
-                <!--li class="checked">Task1</li>
-                <li>Task2</li>
-                <li>Task3</li-->
-            </ul>
-        </div>
+    <!-- การ์ดหลัก -->
+    <div class="card">
+      <img src=".vscode/p1.jpg" alt="Logo" class="logo" />
+      <h1>HBD แพรวามีความสุขมากๆนะ 🎂</h1>
+      <p>วันเกิดปีนี้ก็ขอให้แพรวามีความสุขมากๆ เจอแต่สิ่งดีๆ คนดีๆเข้ามาในชีวิต จะเป็นพี่บช.ปี3แล้วก็ พยามเข้าละกับการฝึกงาน</p>
+
+      <button id="btnSurprise">🎁</button>
+
+      <p id="secret" class="hidden">
+      </p>
     </div>
-    <script src="script.js"></script>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
